# Mini_AI_Automation_Agent_Projects

./: README.md
ai_meeting_note_extractor_process/: README.md
ai_meeting_note_extractor_process/backend/: .env.example  Dockerfile  agent.py  main.py  pyproject.toml  requirements.txt
ai_meeting_note_extractor_process/backend/test/: main_debug.py  test_agent.py
ai_meeting_note_extractor_process/frontend/: .env.example  package-lock.json  package.json
ai_meeting_note_extractor_process/frontend/app/: config.ts  globals.css  layout.tsx  page.tsx  types.ts
ai_meeting_note_extractor_process/frontend/app/components/: MeetingNotesProcessor.tsx
ai_meeting_note_extractor_process/testing_files/: meeting_action_items.csv  meeting_data.json  meeting_notes.md  meeting_notes_Word.docx  meeting_transcript.txt
ai_project_proposal_writer/: .gitignore  PRD.md  README.md
ai_project_proposal_writer/backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
ai_project_proposal_writer/backend/agent/: proposal_agent.py
ai_project_proposal_writer/backend/models/: schemas.py
ai_project_proposal_writer/backend/routes/: generate.py  history.py
ai_project_proposal_writer/frontend/: .env.example  .gitignore  package-lock.json  package.json
ai_project_proposal_writer/frontend/app/: globals.css  layout.tsx  page.tsx
ai_project_proposal_writer/frontend/hooks/: useGSAPAnimation.ts
ai_project_proposal_writer/supabase/: fix_rls.sql
ai_project_proposal_writer/supabase/migrations/: initial_schema.sql  reset_app_tables.sql
(+16 files in other folders)
